feat(apache_metrics source): Draft implementation
Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -102,6 +102,7 @@ scopes:
   - sematext provider
 
   # sources
+  - apache_metrics source
   - docker source
   - file source
   - generator source
